feat: add endpoints to list audios and images with metadata only
